2010-06-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/2Controls/GormPopUpButtonEditor.m
	(-attachPopUpWithFrame:inView:): Copy change from -gui which swaps
	the meaning of NSMinYEdge and NSMaxYEdge.

2010-06-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/2Controls/GormPopUpButtonAttributesInspector.h
	* Palettes/2Controls/GormPopUpButtonAttributesInspector.m
	* Palettes/2Controls/GormNSPopUpButtonInspector.gorm: Add a form to
	allow editing the title of a pull down menu and a pop up button to
	allow setting its preferred attachment edge.

2010-06-19 Riccardo Mottola

	* GormLib/IBEditors.h
	Make IBEditors implement NSobject protocol to avoid warnings.

2010-06-02 17:45-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/GormFontView.gorm: Fix problem with popup showing
	as Button.
	* GormCore/GormDocument.m: Add the NSMenu as a top level item only
	if it has filesOwner as it's parent.
	* GormCore/GormPalettesManager.m: remove the restriction for having
	just one instance of NSMenu in the document at the top level.

2010-05-30 03:07-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m: In 
	[GormDocument loadFileWrapperRepresentation:ofType:] call
	updateChangeCount: to clear changes so that the document
	doesn't show as modified on load.	

2010-05-30 03:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Added Xib.plugin to resources.
	* GormInfo.plist: Added xib to the list of files Gorm can load
	* Gorm.m: Change to recieve notifications to add/delete classes.
	* Plugins/GNUmakefile: Added Xib plugin to subprojects list.
	* Plugins/Xib/GNUmakefile
	* Plugins/Xib/GNUmakefile.preamble
	* Plugins/Xib/GormXibCustomResource.h
	* Plugins/Xib/GormXibCustomResource.m
	* Plugins/Xib/GormXibPlugin.m
	* Plugins/Xib/GormXibWrapperLoader.h
	* Plugins/Xib/GormXibWrapperLoader.m: Initial code for XIB plugin.

2010-05-28  Wolfgang Lux  <wolfgang.lux@gmail.com>
