@@ -44,7 +44,7 @@
     ApplicationName = "Gorm";
     ApplicationRelease = "Gorm 1.2.13 (SVN)";
     Authors = ("Gregory John Casamento <greg_casamento@yahoo.com>","Richard Frith-Macdonald <rfm@gnu.org>","Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>");
-    Copyright = "Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 FSF";
+    Copyright = "Copyright (C) 1999-2010 FSF";
     CopyrightDescription = "Released under the GNU General Public License 3.0";
     NSBuildVersion = "1.2.13 May 19 2010";
 }
